--- a/ml/configAsync.yaml
+++ b/ml/configAsync.yaml
@@ -1,4 +1,6 @@
 trainingInput:
+  runtimeVersion: "2.3"
+  pythonVersion: "3.7"
   scaleTier: CUSTOM
   masterType: n1-standard-4
   workerType: n1-standard-4
